# file_downloader

./: .gitignore  README.md  pyproject.toml
file_downloader/: __init__.py  helpers.py
file_downloader/services/: downloader.py
filedpy/: __init__.py  __main__.py  cli.py
filedpy/services/: downloader.py
tests/: test_data.py  test_downloader.py  test_helpers.py
