[tool.poetry]
name = "file-downloader"
version = "0.1.0"
description = ""
authors = ["Fhuad Balogun <fhuadbalogun@gmail.com>"]
readme = "README.md"
packages = [{include = "file_downloader"}]

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
